<resources>
    <string name="app_name">ЛК БМВЛ</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Пароль</string>
    <string name="action_sign_in">Войти</string>
    <string name="invalid_username">Некорректная почта или Телефон</string>
    <string name="invalid_password">Пароль должен содержать минимум 5 символов</string>
    <string name="order">Заказы</string>
    <string name="search">Поиск</string>
    <string name="profile">Профиль</string>
    <string name="Notice">Уведомления</string>
    <string name="people">Подчиненные</string>
    <string name="s_numer">Номер заявки</string>
    <string name="s_numer_protocol">Номер протокола</string>
    <string name="ot">Дата от</string>
    <string name="Do">Дата до</string>
    <string name="email">Email или Телефон</string>
    <string name="price_ot">Цена От</string>
    <string name="price_do">Цена До</string>
    <string name="Login_title">Авторизация</string>
    <string name="new_order_title">Выберите тип заявки</string>
    <string name="new_pattern_title">Выберите тип шаблона</string>
    <string name="new_order">Новая заявка</string>
    <string name="edit_order">Редактирование заявки</string>
    <string name="Doc_Face">Доверянное лицо</string>
    <string-array name="DocList">
        <item>Выдать результаты на руки определенному лицу по доверенности</item>
        <item>Прислать посредством почты России на адрес</item>
        <item>Отправить по Email с последующей досылкой оригиналов почтой</item>
    </string-array>
    <string-array name="Menu_proby">
        <item>Пробы</item>
        <item>Происхождение</item>
        <item>Информация о партии</item>
        <item>Служебная информация</item>
    </string-array>
    <string-array name="type_material">
        <item>Молоко сырое</item>
        <item>Мясо других видов животных</item>
        <item>Мясо говядина</item>
        <item>Мясо свинина</item>
        <item>Мясо птицы</item>
        <item>Мясо баранина</item>
        <item>Мясо конина</item>
        <item>Мясо кролика</item>
        <item>Мясо диких животных</item>
        <item>Сырье для кормовых добавок</item>
    </string-array>
    <string-array name="units_of_measure">
        <item>-</item>
        <item>°С</item>
        <item>1 проба</item>
        <item>мм</item>
        <item>1 протокол</item>
        <item>кг</item>
        <item>1 иссл.</item>
        <item>1 пассаж</item>
        <item>3 пассажа</item>
        <item>1 проба(3 исс</item>
        <item>1 проба(3 иссл.)</item>
        <item>1 проба(2 иссл.)</item>
        <item>1 проба</item>
        <item>1 час</item>
        <item>проба</item>
        <item>Бк/кг</item>
        <item>Бк/л</item>
        <item>%</item>
        <item>ОПВиГ</item>
        <item>Без названия</item>
        <item>мкл</item>
        <item>ед/л</item>
        <item>г/л</item>
        <item>ммоль/л</item>
        <item>мкмоль/л</item>
        <item>мкг/мл</item>
        <item>мг%</item>
        <item>мл%</item>
        <item>мм/л</item>
        <item>mmol/L</item>
        <item>Cell/uL</item>
        <item>umol/L</item>
        <item>g/L</item>
        <item>баллы</item>
        <item>см{3} раствора NaOH 1моль/дм{3} /100 см{3}</item>
        <item>°T</item>
        <item>кг/м³</item>
        <item>°C</item>
        <item>группа</item>
        <item>г/100 г</item>
        <item>мг/кг</item>
        <item>мкг/г</item>
        <item>мгКОН</item>
        <item>мг йода</item>
        <item>мг КОН/г</item>
        <item>ммоль активного кислорода/кг</item>
        <item>мэкв/кг</item>
        <item>ºК</item>
        <item>Т</item>
        <item>градус</item>
    </string-array>
    <string-array name="documents">
        <item>ТР ТС 021/2011</item>
        <item>ГОСТ 32161-2013</item>
        <item>ГОСТ 32163-2013</item>
        <item>ТР ТС 015/2011</item>
        <item>Инструкция о радиологическом контроле качества кор...</item>
        <item>ГОСТ Р 54040-2010</item>
        <item>МИ активности радионуклидов с использованием бета-...</item>
        <item>СанПиН 2.3.2.1078-01</item>
        <item>СанПиН 2.1.4.1116-02</item>
        <item>МИ суммарной альфа-активности с использованием сци...</item>
        <item>МИ активности радионуклидов с использованием сцинт...</item>
        <item>инструкция по применению набора реагентов для выяв...</item>
        <item>Инструкция по применению тест-системы "БРУ-КОМ" дл...</item>
        <item>Инструкция по применению тест-системы "БРУ-КОМ" дл...</item>
        <item>Инструкция по применению тест-системы "Грипп" для ...</item>
        <item>Инструкция по применению тест-системы "ЭНТЕРКОЛ" д...</item>
        <item>Инструкция по применению тест-системы"КАМ-БАК" для...</item>
        <item>инструкция по применению тест-системы  для обнаруж...</item>
        <item>инструкция по применению тест-системы  для выявлен...</item>
        <item>Инструкция по применению тест-системы "МИК-КОМ" дл...</item>
        <item>Инструкция по применению тест-системы "РОТАВИР" дл...</item>
        <item>Инструкция по применению тест-системы "РОТАВИР" дл...</item>
        <item>Инструкция по применению набора реагентов "ПЦР-САЛ...</item>
        <item>Инструкция по применению тест-системы "СИБ-ДИФ" дл...</item>
        <item>инструкция по применению тест-системы для идентифи...</item>
        <item>Инструкция по применению набора реагентов для выяв...</item>
        <item>Инструкция по применению тест-системы "МТБ-ДИФ" дл...</item>
        <item>Инструкция по применению тест-системы "ХЛА-КОМ" дл...</item>
        <item>Инструкция к набору реагентов «ПЦР-БЛЮТАНГ-ФАКТОР»...</item>
        <item>инструкция по применению тест-системы для выявлени...</item>
        <item>Инструкция по применению тест-системы "ВД" для выя...</item>
        <item>инструкция по применению тест-системы «РИНОКОР» дл...</item>
        <item>Инструкция по применению тест-системы "ЛЕЙКОЗ" для...</item>
        <item>инструкция по применению тест-системы для обнаруже...</item>
        <item>Инструкция по применению тест-системы для выявлени...</item>
        <item>инструкция по применению набора реагентов для выяв...</item>
        <item>Инструкция по применению тест-системы "АПП" для вы...</item>
        <item>инструкция по применению тест-системы для выявлени...</item>
        <item>инструкция по применению тест-системы для диагност...</item>
        <item>Инструкция по применению тест-системы "КЧС" для вы...</item>
        <item>Инструкция по применению тест-системы "МИК-ДИФ" дл...</item>
        <item>инструкция по применению тест-системы для выявлени...</item>
        <item>инструкция по применению тест-системы для выявлени...</item>
        <item>инструкция по применению тест-системы для выявлени...</item>
        <item>Инструкция по применению тест-системы для обнаруже...</item>
        <item>Инструкция по применению тест-системы "ЭДС" для вы...</item>
        <item>Инструкция по применению набора реагентов для обна...</item>
        <item>Инструкция по применению набора для выявления РНК ...</item>
        <item>Инструкция по применению набора для выявления ДНК ...</item>
    </string-array>
    <string-array name="sample_states">
        <item>Первично</item>
        <item>Соответствует</item>
        <item>доставлен в термоконтейнере с соблюдением сроков д...</item>
        <item>полиэтиленовый пакет опечатан, с этикеткой</item>
        <item>доставлен в установленных сроках годности, с соблю...</item>
        <item>контроль первого вскрытия сейф-пакета сохранен</item>
    </string-array>
    <string-array name="transport">
        <item>Авто</item>
        <item>ЖД</item>
        <item>Авиа</item>
        <item>Морской</item>
    </string-array>
    <string-array name="packaging_type">
        <item>банка-крынка с крышкой</item>
        <item>бочка</item>
        <item>бумажные конверты, термосумка</item>
        <item>бумажный мешок, полиэтиленовый пакет</item>
        <item>бумажный пакет</item>
        <item>бутылка из полиэтилентерефталата</item>
        <item>в полиэтиленовом пакете, упакован в сейф-пакет, по...</item>
        <item>в потребительской упаковке, упакован в сейф-пакет,...</item>
        <item>вакуумная пробирка, термосумка</item>
        <item>вакуумные пробирки, термосумка</item>
        <item>вакуумный пакет</item>
        <item>ванночка из полистирола</item>
        <item>гофрокороб</item>
        <item>гофротара</item>
        <item>жестяная банка</item>
        <item>картонная коробка</item>
        <item>кашированная фольга</item>
        <item>Контейнер, термосумка</item>
        <item>Контейнеры, термосумка</item>
        <item>лоток ВСП</item>
        <item>монолит</item>
        <item>пакет</item>
        <item>пакеты, термосумка</item>
        <item>пенопластовая коробка</item>
        <item>пластиковая бутылка</item>
        <item>пластиковые пакеты, термосумка</item>
        <item>пластиковый контейнер, термосумка</item>
        <item>пластиковый стакан с крышкой</item>
        <item>пломба</item>
        <item>подложка</item>
        <item>Полимерная пленка, К/Д</item>
        <item>полимерные пакеты в картонных коробках (2 короба)</item>
        <item>полипропиленовая пленка</item>
        <item>полипропиленовый стакан</item>
        <item>полистерольный пакет</item>
        <item>полиэтиленовые мешки</item>
        <item>полиэтиленовый пакет</item>
        <item>полиэтиленовый пакет с этикеткой</item>
        <item>полиэтиленовый пакет, опечатано</item>
        <item>полиэтиленовый пакет, опечатано, термосумка</item>
        <item>пробирка, термосумка</item>
        <item>Пробирки Эппендорфа, термосумка</item>
        <item>пробирки, термосумка</item>
        <item>Прозрачный пакет ПНД</item>
        <item>Сейф-пакет</item>
        <item>стаканчик из полимерных материалов по 150 г.</item>
        <item>стеклянная бутылка</item>
        <item>стерильные банки, закрытые плотной тканью, обвязан...</item>
        <item>стерильные пластиковые пакеты</item>
        <item>стерильный контейнер</item>
        <item>стерильный пакет</item>
        <item>тетра/брик</item>
        <item>упакован в полиэтиленовый пакет, помещен в сейф-па...</item>
        <item>упакован в полиэтиленовый пакет, промаркирован</item>
        <item>упакован в сейф-пакет, помещен в изотермический ко...</item>
        <item>упаковано под вакуумом</item>
        <item>фирменный пакет</item>
        <item>Фирменный пакет ПВД</item>
        <item>флакон</item>
        <item>флакон, термосумка</item>
        <item>чашки Петри,термосумка</item>
    </string-array>
    <string-array name="Reserch_start">
        <item>Первично</item>
        <item>Повторно</item>
    </string-array>
    <string-array name="hoz_zab">
        <item>Благополучно</item>
        <item>Не благополучно</item>
    </string-array>
    <string-array name="target_research">
        <item>Производственный контроль</item>
        <item>Входной производственный контроль</item>
        <item>Экспорт</item>
        <item>Импорт</item>
        <item>УЛК</item>
        <item>Сертификация/Декларирование</item>
    </string-array>
    <string-array name="target_research2">
        <item>Платная</item>
        <item>Производственный контроль</item>
        <item>Сертификация и декларирование</item>
    </string-array>
    <string-array name="order_types">
        <item>Заявка на исследование пищевых продуктов и кормов</item>
        <item>Заявка на исследование семян, почв, удобрений</item>
        <item>Сопроводительное письмо</item>
        <item>Гарантийное письмо</item>
        <item>Информационное письмо</item>
        <item>Запрос</item>
    </string-array>
    <string name="menu_patterns">Шаблоны</string>
    <string name="contact_face">Контактное лицо</string>
    <string name="Select_btn">Обзор…</string>
    <string name="file_no_select">Файл не выбран</string>
    <string name="save_text">Сохранить</string>
</resources>