<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_order"
        android:icon="@drawable/ic_description_black_24dp"
        android:title="@string/order" />

    <item
        android:id="@+id/navigation_patterns"
        android:icon="@drawable/ic_content_paste_black_24dp"
        android:title="@string/menu_patterns" />

<!--    <item-->
<!--        android:id="@+id/navigation_people"-->
<!--        android:icon="@drawable/ic_people_black_24dp"-->
<!--        android:title="@string/people" />-->

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/search" />

    <item
        android:id="@+id/notice"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/Notice" />
</menu>