<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#FFFFFF"
    app:cardCornerRadius="5dp"
    app:cardElevation="2dp"
    app:cardUseCompatPadding="true"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_margin="5dp"
        android:layout_height="match_parent">

        <include
            android:id="@+id/include2"
            layout="@layout/item_original_doc" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/MaterialButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginEnd="10dp"
            android:text="@string/save_text"
            app:cornerRadius="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/path"
            app:strokeColor="@color/accent"
            app:strokeWidth="1dp" />

        <TextView
            android:id="@+id/hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Скан доверенности:"
            android:textColor="@color/text_order_field_color"
            app:layout_constraintBottom_toBottomOf="@+id/select"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/select" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="10dp"
            android:text="@string/Select_btn"
            app:cornerRadius="5dp"
            app:layout_constraintStart_toEndOf="@+id/hint"
            app:layout_constraintTop_toBottomOf="@+id/include2"
            app:strokeColor="@color/accent"
            app:strokeWidth="1dp" />

        <TextView
            android:id="@+id/path"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/file_no_select"
            android:textAlignment="textStart"
            android:textColor="@color/text_order_field_color"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/select" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="path,select,hint" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>